--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "bcrypt-nodejs": "0.0.3",
     "core-js": "^3.4.4",
+    "moment": "^2.24.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
